--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
+  --secondary: #FF3333;
+  --primary: #343434;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #ffffff;
+    --secondary: #FF3333;
+    --primary: #343434;
   }
 }
 
 body {
-  color: var(--foreground);
+  color: var(--primary);
   background: var(--background);
+  box-sizing: border-box;
+  max-width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.smallText{
+  /* font-size: clamp(450vw); */
+  font-size: clamp(9px, 6vw, 36px);
+}
+.mediumText{
+  /* font-size: clamp(450vw); */
+  font-size: clamp(16px, 6vw, 132px);
+  all: unset;
+}
+.LargeText{
+  /* font-size: clamp(450vw); */
+  font-size: clamp(30px, 12vw, 278px);
 }
