--- a/app/globals.css
+++ b/app/globals.css
@@ -26,19 +26,19 @@ body {
   background: var(--background);
   box-sizing: border-box;
   max-width: 100vw;
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .smallText{
   /* font-size: clamp(450vw); */
-  font-size: clamp(9px, 6vw, 36px);
+  font-size: clamp(9px, 5vw, 30px);
 }
 .mediumText{
   /* font-size: clamp(450vw); */
   font-size: clamp(16px, 6vw, 132px);
-  all: unset;
 }
 .LargeText{
   /* font-size: clamp(450vw); */
-  font-size: clamp(30px, 12vw, 278px);
+  font-size: clamp(30px, 10vw, 278px);
 }
