--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 .smallText{
@@ -41,4 +42,14 @@ body {
 .LargeText{
   /* font-size: clamp(450vw); */
   font-size: clamp(30px, 10vw, 278px);
+}
+
+.marquee{
+  animation: marqueeAnimation 20s linear infinite; 
+}
+
+@keyframes  marqueeAnimation{
+  to {
+    transform: translateX(calc(-100% - 60px ));
+  }
 }
